--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "history": "^4.9.0",
+    "md5": "^2.2.1",
     "mongodb": "^3.2.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
